# univ_info

./: .env.example  .gitignore  .vercelignore  README.md  analyze_pages.py  check_vercel.py  check_workflow.py  create_repo.py  enable_pages.py  mkdocs.yml  pyproject.toml  requirements.txt  sources.yaml  test_run_log.txt  trigger.py  vercel.json  vercel_deploy.py
.github/workflows/: fetch-and-notify.yml
analysis/: 中央_raw.html  工学院_raw.html  明治_raw.html  東京理科_raw.html  東京都市_raw.html  立教_raw.html  電気通信_raw.html
data/: accumulated.md  url_discovery.json
data/snapshots/: test_20260404_003713.json  test_20260404_003725.json  test_university_20260404_003713.json  test_university_20260404_003725.json  上智_20260405_063255.json  中央_20260404_152645.json  中央_20260404_153134.json  中央_20260404_153601.json  中央_20260404_223524.json  中央_20260405_061035.json  中央_20260405_063259.json  学習院_20260405_063259.json  工学院_20260404_153614.json  工学院_20260404_223538.json  工学院_20260405_061048.json  工学院_20260405_063301.json  慶應義塾_20260405_063255.json  早稲田_20260405_061022.json  早稲田_20260405_063255.json  明治_20260404_004844.json  明治_20260404_004903.json  明治_20260404_005039.json  明治_20260404_021002.json  明治_20260404_083455.json  明治_20260404_152643.json  明治_20260404_153132.json  明治_20260404_153555.json  明治_20260404_223518.json  明治_20260405_061029.json  (+30 more)
docs/: config.md  data.md  guide.md  index.md  mkdocs.yml
scripts/: analyze_html.py  fetch.py  fetch_advanced.py  find_correct_urls.py  generate_pages.py  navigate_universities.py  notify.py  verify_more_urls.py  verify_urls.py
tests/: test_fetch.py
