[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "univ-info"
version = "1.0.0"
description = "University Opencampus Information Aggregator"

[tool.vercel]
# This is a static site builder, not a Python application
buildCommand = "pip install -r requirements.txt && pip install mkdocs-material && mkdocs build"
outputDirectory = "site"
